# imgui-filedialog-rs

./: Cargo.toml  README.md
imgui-filedialog-examples/: Cargo.toml
imgui-filedialog-examples/examples/: basic_dialog.rs
imgui-filedialog-examples/examples/support/: mod.rs
imgui-filedialog-sys/: Cargo.toml  build.rs
imgui-filedialog-sys-bindgen/: Cargo.toml
imgui-filedialog-sys-bindgen/src/: main.rs
imgui-filedialog-sys/src/: bindings.rs  lib.rs
src/: lib.rs
