[package]
name = "imgui-filedialog-sys"
version = "0.1.0"
edition = "2018"
authors = ["Ben Dickson"]
description = "Raw FFI bindings to imnodes"
license = "MIT"
categories = ["gui", "external-ffi-bindings"]
build = "build.rs"
links = "ImGuiFileDialog"

[dependencies]
imgui-sys = "0.7"

[build-dependencies]
cc = "1.0"
